--- a/k8s_manifests/database/statefulset.yaml
+++ b/k8s_manifests/database/statefulset.yaml
@@ -25,7 +25,7 @@ spec:
         command:
             - "mongod"
             - "--wiredTigerCacheSizeGB"
-            - "0.1"
+            - "0.25"
             - "--bind_ip"
             - "0.0.0.0"
         env:
@@ -44,7 +44,7 @@ spec:
             memory: "512Mi"
             cpu: "250m"
           limits:
-            memory: "1024Mi"
+            memory: "1Gi"
             cpu: "500m"
         livenessProbe:
           tcpSocket:
