--- a/k8s_manifests/frontend/deployment.yaml
+++ b/k8s_manifests/frontend/deployment.yaml
@@ -6,7 +6,6 @@ metadata:
   namespace: dev
   labels:
     app: frontend
-    type: frontend
 spec:
   replicas: 2
   strategy:
@@ -16,14 +15,14 @@ spec:
       maxUnavailable: 0
   selector:
     matchLabels:
-      app: frontend         # Consistent label
+      app: frontend
   template:
     metadata:
       labels:
         app: frontend
     spec:
       containers:
-      - name: frontend
+      - name: frontend-app
         image: ahsan98/mern-app:react-1.0
         imagePullPolicy: IfNotPresent
         ports:
@@ -34,7 +33,6 @@ spec:
         - name: nginx-config
           mountPath: /etc/nginx/conf.d/default.conf
           subPath: nginx.conf
-        # Health checks added
         livenessProbe:
           httpGet:
             path: /health
