--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,9 @@ version: "3.9"
 
 services:
   mongodb:
-    image: mongo:7.0
+    image: mongo:8.0
     container_name: mongo
+    restart: always
     ports:
       - "27017:27017"
     volumes:
@@ -12,18 +13,24 @@ services:
   backend:
     build: ./backend
     container_name: backend
+    restart: always
     ports:
-      - "3000:3000"
+      - "8081:8080"
     environment:
-      MONGO_URI: mongodb://mongo:27017/todo
+      MONGO_CONN_STR: mongodb://mongo:27017/todo
+      USE_DB_AUTH: "false"
+      PORT: 8080
     depends_on:
       - mongodb
 
   frontend:
     build: ./frontend
     container_name: frontend
+    restart: always
     ports:
-      - "8085:80"
+      - "3000:80"
+    environment:
+      REACT_APP_BACKEND_URL: http://localhost:8081/api/tasks
     depends_on:
       - backend
 
