--- a/backend/package.json
+++ b/backend/package.json
@@ -6,18 +6,19 @@
   "type": "commonjs",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["nodejs", "express", "mongodb", "todo"],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.1",
-    "mongoose": "^8.1.1",
+    "express": "^5.1.0",
+    "mongoose": "^9.0.1",
     "dotenv": "^16.4.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.1.9"
   }
 }
