--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,13 +21,10 @@ services:
     depends_on:
       - mongodb
     environment:
-      MONGO_CONN_STR: mongodb://mongodb:27017/todo?authSource=admin
-      MONGO_USERNAME: admin
-      MONGO_PASSWORD: password123
-      USE_DB_AUTH: "true"
+      MONGO_CONN_STR: mongodb://admin:password123@mongodb:27017/todo?authSource=admin
       PORT: 8080
     ports:
-      - "8081:8080"
+      - "8080:8080"
     networks:
       - mern-network
     restart: unless-stopped
@@ -37,7 +34,7 @@ services:
     build:
       context: ./frontend
       args:
-        REACT_APP_BACKEND_URL: http://localhost:8081/api/tasks
+        VITE_API_URL: http://localhost:8080/api/tasks
     container_name: frontend
     depends_on:
       - backend
