updated stateful set

--- a/k8s_manifests/database/statefulset.yaml
+++ b/k8s_manifests/database/statefulset.yaml
@@ -24,6 +24,7 @@ spec:
         imagePullPolicy: IfNotPresent
         command:
           - "mongod"
+          - "--auth"
           - "--bind_ip"
           - "0.0.0.0"
         ports:
