--- a/k8s_manifests/frontend/ingress.yaml
+++ b/k8s_manifests/frontend/ingress.yaml
@@ -13,7 +13,7 @@ spec:
       http:
         paths:
 
-        # 1. Backend API (Must be listed FIRST or used with specific path)
+        # Backend API (Must be listed FIRST or used with specific path)
         - path: /api
           pathType: Prefix
           backend:
@@ -22,7 +22,7 @@ spec:
               port:
                 number: 8080
 
-        # 2. Frontend App (Matches everything else)
+        # Frontend App (Matches everything else)
         - path: /
           pathType: Prefix
           backend:
